Bug 562488 - Fix crash destroying stream in OSS sydneyaudio backend.  r=kinetik