media/libsydneyaudio/src/sydney_audio_oss.c
@@ -258,6 +258,7 @@ sa_stream_open(sa_stream_t *s) {
 int
 sa_stream_destroy(sa_stream_t *s) {
   int result = SA_SUCCESS;
+  pthread_t thread_id;
 
   if (s == NULL) {
     return SA_SUCCESS;
@@ -265,8 +266,10 @@ sa_stream_destroy(sa_stream_t *s) {
 
   pthread_mutex_lock(&s->mutex);
 
+  thread_id = s->thread_id;
+
   /*
-   * This causes the thread sending data to ALSA to stop
+   * This causes the thread sending data to OSS to stop
    */
   s->thread_id = 0;
 
@@ -280,6 +283,8 @@ sa_stream_destroy(sa_stream_t *s) {
   }
 
   pthread_mutex_unlock(&s->mutex);
+
+  pthread_join(thread_id, NULL);
 
   /*
    * Release resources.
